# MacGal

./: CHANGELOG.md  LICENSE  README.ja_JP.md  README.md  README.zh_CN.md  cliff.toml  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  runner.rs  storage.rs  wine_runner.rs
src/components/: DeleteModal.tsx  DiscoveryPage.tsx  InstancesPage.tsx  LaunchControl.tsx  Layout.tsx  SearchModal.tsx  SettingsPage.tsx  ToastProvider.tsx
src/contexts/: ThemeContext.tsx
